--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,15 @@ altair = "*"
 geohash2 = "*"
 maxminddb = "*"
 maxminddb-geolite2 = "*"
+altair-saver = "*"
+selenium = "*"
 
 [dev-packages]
+pytest = "*"
+pre-commit = "*"
+black = "==20.8b1"
+flake8 = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.9"
