--- a/Pipfile
+++ b/Pipfile
@@ -20,9 +20,9 @@ numpy = "*"
 [dev-packages]
 pytest = "*"
 pre-commit = "*"
-black = "==20.8b1"
+black = ">=22.6"
 flake8 = "*"
 pylint = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.10"
