--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,33 @@
+[tool.poetry]
+name = "rpki-analysis-int"
+version = "0.1.0"
+description = ""
+authors = ["Ties de Kock <ties@tiesdekock.nl>"]
+readme = "README.md"
+packages = [{include = "rpki_analysis"}]
+
+[tool.poetry.dependencies]
+python = "^3.11"
+jupyterlab = "^3.5.2"
+pandas = "^1.5.2"
+netaddr = "^0.8.0"
+altair = "^4.2.0"
+pytricia = "^1.0.2"
+aiohttp = "^3.8.3"
+pytest-asyncio = "^0.20.3"
+alive-progress = "^3.0.1"
+click = "^8.1.3"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+pre-commit = "^2.21.0"
+black = "^22.12.0"
+flake8 = "^6.0.0"
+pylint = "^2.15.10"
+flake8-typing-imports = "^1.14.0"
+autoflake = "^2.0.0"
+
+
 [tool.black]
 target-version = ["py39"]
 include = '\.pyi?$'
