--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,16 +2,21 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/ambv/black
-    rev: 21.7b0
+    rev: 23.12.1
     hooks:
       - id: black
-        language_version: python3.9
-  -   repo: https://gitlab.com/pycqa/flake8
-      rev: 3.9.2
+        language_version: python3.12
+  -   repo: https://github.com/PyCQA/autoflake
+      rev: v2.2.1
+      hooks:
+      -   id: autoflake
+  -   repo: https://github.com/pycqa/flake8
+      rev: 7.0.0
       hooks:
       -   id: flake8
+          additional_dependencies: [flake8-typing-imports==1.12.0]
   -   repo: https://github.com/timothycrosley/isort
-      rev: '5.9.2'  # Use the revision sha / tag you want to point at
+      rev: '5.13.2'  # Use the revision sha / tag you want to point at
       hooks:
       - id: isort
         additional_dependencies: [toml]
