--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,11 @@ flake8 = "^6.1.0"
 pylint = "^2.17.7"
 flake8-typing-imports = "^1.15.0"
 autoflake = "^2.2.1"
+ipdb = "^0.13.13"
 
 
 [tool.black]
-target-version = ["py39"]
+target-version = ["py312"]
 include = '\.pyi?$'
 exclude = '''
 /(
