--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "rpki-analysis-int"
+name = "rpki-analysis"
 version = "0.1.0"
 description = ""
 authors = ["Ties de Kock <ties@tiesdekock.nl>"]
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "rpki_analysis"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 jupyterlab = "^4.0.10"
 pandas = "^1.5.3"
 netaddr = "^0.8.0"
@@ -17,6 +17,8 @@ aiohttp = "^3.9.1"
 pytest-asyncio = "^0.20.3"
 alive-progress = "^3.1.5"
 click = "^8.1.7"
+xlwt = "^1.3.0"
+openpyxl = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
