--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ alive-progress = "^3.1.5"
 click = "^8.1.7"
 xlwt = "^1.3.0"
 openpyxl = "^3.1.2"
+matplotlib = "^3.8.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
