--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ click = "^8.1.7"
 xlwt = "^1.3.0"
 openpyxl = "^3.1.2"
 matplotlib = "^3.8.2"
+psycopg2 = "^2.9.9"
+sqlalchemy = "^2.0.29"
+pyinterval = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
