--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ psycopg2 = "^2.9.9"
 sqlalchemy = "^2.0.29"
 pyinterval = "^1.2.0"
 pyarrow = "^18.0.0"
+duckdb = "^1.1.3"
+polars = "^1.12.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
