--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,10 @@ line_length = 88
 
 [dependency-groups]
 dev = [
+    "pytest-xdist>=3.6.1",
     "pytest>=8.3.4",
     "pytest-asyncio>=0.25.0",
 ]
-# known_third_party = []
+
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
