Improve ci/cd run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: "Run tests"
         run: |
-          uv run pytest -n auto
+          uv run pytest -n auto --cov=rpki_analysis --cov-report xml:coverage.xml
