--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ dev = [
     "pytest-xdist>=3.6.1",
     "pytest>=8.3.4",
     "pytest-asyncio>=0.25.0",
+    "pytest-cov>=6.0.0",
 ]
 
 [tool.pytest.ini_options]
