--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "rpki-analysis"
 version = "0.1.0"
 description = ""
-authors = ["Ties de Kock <ties@tiesdekock.nl>"]
+authors = [{name = "Ties de Kock", email = "ties@tiesdekock.nl"}]
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
@@ -20,6 +20,21 @@ dependencies = [
     "pytricia>=1.0.2",
     "xlwt>=1.3.0",
 ]
+
+[settings]
+
+[dependency-groups]
+dev = [
+    "pytest-xdist>=3.6.1",
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.25.0",
+    "pytest-cov>=6.0.0",
+]
+
+[build-system]
+requires = ["uv>=0.5,<0.6"]
+build-backend = "uv"
+
 
 # [tool.poetry.dependencies]
 # jupyterlab = "^4.0.10"
@@ -76,16 +91,6 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 line_length = 88
-
-[settings]
-
-[dependency-groups]
-dev = [
-    "pytest-xdist>=3.6.1",
-    "pytest>=8.3.4",
-    "pytest-asyncio>=0.25.0",
-    "pytest-cov>=6.0.0",
-]
 
 [tool.pytest.ini_options]
 asyncio_default_fixture_loop_scope = "function"
