--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: "Run tests"
         run: |
-          uv run pytest -n auto --junitxml=pytest.xml --cov-branch --cov=rpki_analysis --cov-report xml:coverage.xml
+          UV_PREVIEW=1 uv run pytest -n auto --junitxml=pytest.xml --cov-branch --cov=rpki_analysis --cov-report xml:coverage.xml
 
       - name: Coverage coverage coverage report 
         uses: MishaKav/pytest-coverage-comment@v1.1.9
