Do not run ruff on ipython notebooks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,9 @@ exclude = '''
 )/
 '''
 
+[tool.ruff.format]
+exclude = ["*.ipynb"]
+
 [tool.isort]
 multi_line_output = 3
 include_trailing_comma = true
