--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,21 +2,26 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/ambv/black
-    rev: 24.10.0
+    rev: 25.1.0
     hooks:
       - id: black
         language_version: python3.12
-  -   repo: https://github.com/PyCQA/autoflake
-      rev: v2.3.1
-      hooks:
-      -   id: autoflake
-  -   repo: https://github.com/pycqa/flake8
-      rev: 7.1.1
-      hooks:
-      -   id: flake8
-          additional_dependencies: [flake8-typing-imports==1.12.0]
-  -   repo: https://github.com/timothycrosley/isort
-      rev: '5.13.2'  # Use the revision sha / tag you want to point at
-      hooks:
-      - id: isort
-        additional_dependencies: [toml]
+  - repo: https://github.com/PyCQA/autoflake
+    rev: v2.3.1
+    hooks:
+    -   id: autoflake
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.1.2
+    hooks:
+    -   id: flake8
+        additional_dependencies: [flake8-typing-imports==1.12.0]
+  - repo: https://github.com/timothycrosley/isort
+    rev: '6.0.1'  # Use the revision sha / tag you want to point at
+    hooks:
+    - id: isort
+      additional_dependencies: [toml]
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    # uv version.
+    rev: 0.6.6
+    hooks:
+      - id: uv-lock
